; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/extr_kva.c_MorphToPM.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/extr_kva.c_MorphToPM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @MorphToPM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MorphToPM() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = call i32 @DosGetInfoBlocks(i32* null, %struct.TYPE_3__** %1)
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 2
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store i32 3, i32* %9, align 4
  br label %10

10:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @DosGetInfoBlocks(i32*, %struct.TYPE_3__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
